# MUSCLE

./: .editorconfig  .env-github-actions  .env.dist  .gitignore  CITATION.cff  LICENSE  README.md  README_TOONTJEHOGER.md  docker-compose-deploy.yml  docker-compose-manage.yaml  docker-compose-prod.yml  docker-compose.yaml  package.json  run-tests-backend  run-tests-frontend  test-back  test-front  tests-selenium.side
backend/: .dockerignore  .flake8  .gitignore  Dockerfile  DockerfileDeploy  DockerfileDevelop  DockerfileManage  README.md  manage.py  mkdocs.yml  pyproject.toml  ruff.toml
backend/action/: admin.py  models.py  translation.py
backend/admin_interface/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/aml/: asgi.py  base_settings.py  development_settings.py  github_actions_settings.py  graphviz_settings.py  production_settings.py  urls.py  wsgi.py
backend/docs/: 02_Start_the_application.md  03_The_admin_interface.md  04_Creating_playlists.md  05_Creating_an_experiment.md  06_Custom_questions.md  07_Actions_overview.md  07_Custom_theme.md  08_Exporting_result_data.md  08_Forms_and_question_widgets.md  09_Actions_overview.md  09_Playback_and_player_widgets.md  10_Create_custom_ruleset.md  10_Forms_and_question_widgets.md  11_Exporting_result_data.md  11_Playback_and_player_widgets.md  13_Running_an_experiment.md  1_Compile_and_watch_scss_files.md  2_Managing_the_database.md  3_Debugging.md  4_Installing_python_packages.md  5_Management_commands.md  6_Running_tests.md  7_Storybook.md  8_Troubleshooting.md  D2_Compile_and_watch_scss_files.md  (+47 more)
(+2326 files in other folders)
